--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API REST for the front-end of the project Web, S6 Polytech Montpellier IG",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon -r dotenv/config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/romain-mezghenna/projetWebAPI#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
   }
